nginx/helm/templates-for-helm/helm-template-nginx-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"nginx-ingress","namespace":"default"},"spec":{"ingressClassName":"nginx-example","rules":[{"http":{"paths":[{"backend":{"service":{"name":"nginx","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: '2024-01-28T16:12:09Z'
  generation: 2
  name: nginx-ingress
  namespace: default
  resourceVersion: '18298'
  uid: 93d2adf2-e9c7-4092-875c-ad6d8a4103ad
spec:
  ingressClassName: nginx-example
  rules:
    - http:
        paths:
          - backend:
              service:
                name: nginx
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
